--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 #root {
   width: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow: hidden;
 }
 
 h1 {
